--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Site Oh My Food",
+  "name": "site_oh_my_food",
   "version": "0.2.0",
   "description": "Prohet n°3 de OpenClassRomm",
   "main": "index.html",
